env_config/tests/ui/struct_field_type_has_no_fromenvvar_impl.stderr
error[E0277]: the trait bound `StructWithoutFromEnvVarImpl: FromEnvVar` is not satisfied
  --> tests/ui/struct_field_type_has_no_fromenvvar_impl.rs:5:10
   |
5  | #[derive(EnvConfig)]
   |          ^^^^^^^^^ the trait `FromEnvVar` is not implemented for `StructWithoutFromEnvVarImpl`
   |
note: required by a bound in `from_env_var`
  --> src/lib.rs
   |
   |     fn from_env_var<S: AsRef<OsStr> + Into<OsString>>(env_var_name: S) -> Result<Option<Self>, EnvVarError> {
   |                        ^^^^^^^^^^^^ required by this bound in `from_env_var`
   = note: this error originates in the derive macro `EnvConfig` (in Nightly builds, run with -Z macro-backtrace for more info)
