env_config/tests/ui/struct_field_type_has_no_fromenvvar_impl.rs
use env_config::{EnvConfig};

struct StructWithoutFromEnvVarImpl;

#[derive(EnvConfig)]
struct MyLovelyConfig {
    some_optional_bool: StructWithoutFromEnvVarImpl,
}

fn main() {}
